[package]
name = "better-web-buzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = {version = "4.3.1", features = ["cookies"]}
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
rand = "0.8.5"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tera = "1.18.1"
tokio = "1.27.0"
cookie = {version = "0.16", features = ["secure", "percent-encode"]}
actix = "0.13.0"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
